@@ -1,3 +1,5 @@
+- Refactor: Return code of PersonCustomer from Customer::getCode instead of externalId
+
 8.3.5 (17-05-2022)
 - Bug Fix: Fix personal email field in debt report
 
